--- a/BookstoreApi/DatabaseLibrary/DatabaseLayer.csproj
+++ b/BookstoreApi/DatabaseLibrary/DatabaseLayer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,6 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.17.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="WishList\" />
   </ItemGroup>
 
 </Project>
